--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="g.mermet@ez-wheel.com">Gregory MERMET</maintainer>
+  <maintainer email="gregory.mermet@idec.com">Gregory MERMET</maintainer>
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
